# cpp_exercise

./: README.md
chess_board/: CMakeLists.txt  main.cpp  queen_attack.h
cpp_ml/: CMakeLists.txt  data.cc  data.hpp  data_handler.cc  data_handler.hpp
cpp_risk_engine/: CMakeLists.txt  Methodologies.md  READMED.md  main.cpp  vcpkg.json
